compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundLocal.kt
fun bar() {
    fun <<!CYCLIC_GENERIC_UPPER_BOUND!>T: T?<!>> foo() {}
    foo()
}
